--- a/client/src/App.css
+++ b/client/src/App.css
@@ -17,6 +17,24 @@ img {
   padding-bottom: 20px;
 }
 
+.page-content {
+  min-height: calc(100vh - 202.5px);
+  padding-top: 50px;
+}
+
+.card-header {
+  height: 300px;
+  position: relative;
+  background: url('./img/Marquee_2019-05-01.jpg') no-repeat;
+  background-size: cover;
+  background-position: center;
+  color: #FFFFFF;
+  padding-top: 100px;
+  text-align: center;
+  font-size: 3rem;
+  font-weight: 300;
+}
+
 .login {
   min-height: calc(100vh - 126px);
   position: relative;
@@ -39,6 +57,7 @@ img {
 
 .lead {
   padding-bottom: 1rem;
+  padding-top: .3rem;
 }
 
 .dark-overlay {
@@ -48,6 +67,12 @@ img {
   left: 0;
   width: 100%;
   height: 100%;
+}
+
+.post-handle {
+  padding-left: 10px;
+  font-weight: 600;
+  font-size: 1.4rem;
 }
 
 .card-form {
