--- a/client/src/App.css
+++ b/client/src/App.css
@@ -7,9 +7,14 @@ h1 {
   font-weight: 300;
 }
 
-h4.ph {
-  font-size: .8rem;
-  font-weight: 300;
+h3 {
+  font-size: 1.3rem;
+  font-weight: 400;
+}
+
+h4 {
+  font-size: .9rem;
+  font-weight: 400;
 }
 
 a {
