--- a/client/src/App.css
+++ b/client/src/App.css
@@ -300,3 +300,12 @@ small.form-text.text-muted {
 .btn {
   margin-bottom: 20px;
 }
+.follow-link {
+  text-decoration: none;
+  color: #FFFFFF;
+}
+.follow-link:hover {
+  text-decoration: none;
+  font-weight: bold;
+  color: #FFFFFF;
+}
